--- a/_sources/docs/keras-time.ipynb
+++ b/_sources/docs/keras-time.ipynb
@@ -6,7 +6,7 @@
         "id": "Ie7y4r0tO5S7"
       },
       "source": [
-        "# Deep learning for timeseries"
+        "# Time series regression"
       ]
     },
     {
@@ -741,7 +741,7 @@
         "callbacks = [\n",
         "    keras.callbacks.ModelCheckpoint(\"time_jena_lstm.keras\",\n",
         "                                    save_best_only=True),\n",
-        "    keras.callbacks.EarlyStopping(monitor=\"val_loss\", min_delta=0, patience=5)\n",
+        "    keras.callbacks.EarlyStopping(monitor=\"val_loss\", min_delta=0.01, patience=2)\n",
         "]"
       ]
     },
@@ -917,8 +917,7 @@
         "callbacks = [\n",
         "    keras.callbacks.ModelCheckpoint(\"time_jena_lstm_dropout.keras\",\n",
         "                                    save_best_only=True),\n",
-        "    keras.callbacks.EarlyStopping(monitor=\"val_loss\", min_delta=0, patience=5)\n",
-        "                                \n",
+        "       keras.callbacks.EarlyStopping(monitor=\"val_loss\", min_delta=0.01, patience=2)\n",
         "]"
       ]
     },
@@ -1053,7 +1052,7 @@
         "callbacks = [\n",
         "    keras.callbacks.ModelCheckpoint(\"time_jena_stacked_gru_dropout.keras\",\n",
         "                                    save_best_only=True),\n",
-        "    keras.callbacks.EarlyStopping(monitor=\"val_loss\", min_delta=0, patience=5)                              \n",
+        "        keras.callbacks.EarlyStopping(monitor=\"val_loss\", min_delta=0.01, patience=2)                            \n",
         "]"
       ]
     },
