--- a/docs/image_augmentation.ipynb
+++ b/docs/image_augmentation.ipynb
@@ -25,6 +25,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "0HEsULqDR7AH",
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "<table class=\"tfo-notebook-buttons\" align=\"left\">\n",
+    "  <td>\n",
+    "    <a target=\"_blank\" href=\"https://www.tensorflow.org/tutorials/images/data_augmentation\"><img src=\"https://www.tensorflow.org/images/tf_logo_32px.png\" />View on TensorFlow.org</a>\n",
+    "  </td>\n",
+    "  <td>\n",
+    "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/tensorflow/docs/blob/master/site/en/tutorials/images/data_augmentation.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
+    "  </td>\n",
+    "  <td>\n",
+    "    <a target=\"_blank\" href=\"https://github.com/tensorflow/docs/blob/master/site/en/tutorials/images/data_augmentation.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" />View source on GitHub</a>\n",
+    "  </td>\n",
+    "  <td>\n",
+    "    <a href=\"https://storage.googleapis.com/tensorflow_docs/docs/site/en/tutorials/images/data_augmentation.ipynb\"><img src=\"https://www.tensorflow.org/images/download_logo_32px.png\" />Download notebook</a>\n",
+    "  </td>\n",
+    "</table>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -53,31 +78,6 @@
     "# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
     "# See the License for the specific language governing permissions and\n",
     "# limitations under the License."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "0HEsULqDR7AH",
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "source": [
-    "<table class=\"tfo-notebook-buttons\" align=\"left\">\n",
-    "  <td>\n",
-    "    <a target=\"_blank\" href=\"https://www.tensorflow.org/tutorials/images/data_augmentation\"><img src=\"https://www.tensorflow.org/images/tf_logo_32px.png\" />View on TensorFlow.org</a>\n",
-    "  </td>\n",
-    "  <td>\n",
-    "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/tensorflow/docs/blob/master/site/en/tutorials/images/data_augmentation.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
-    "  </td>\n",
-    "  <td>\n",
-    "    <a target=\"_blank\" href=\"https://github.com/tensorflow/docs/blob/master/site/en/tutorials/images/data_augmentation.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" />View source on GitHub</a>\n",
-    "  </td>\n",
-    "  <td>\n",
-    "    <a href=\"https://storage.googleapis.com/tensorflow_docs/docs/site/en/tutorials/images/data_augmentation.ipynb\"><img src=\"https://www.tensorflow.org/images/download_logo_32px.png\" />Download notebook</a>\n",
-    "  </td>\n",
-    "</table>"
    ]
   },
   {
@@ -176,6 +176,7 @@
      "shell.execute_reply": "2022-02-23T02:24:44.653414Z"
     },
     "id": "ytHhsYmO52zy",
+    "scrolled": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -632,9 +633,14 @@
    },
    "source": [
     "- There are a variety of preprocessing layers you can use for data augmentation including \n",
-    "  -`tf.keras.layers.RandomContrast`, \n",
-    "  - `tf.keras.layers.RandomCrop`, \n",
-    "  - `tf.keras.layers.RandomZoom`, and others."
+    "\n",
+    "   - `tf.keras.layers.RandomContrast`\n",
+    "\n",
+    "   - `tf.keras.layers.RandomCrop`\n",
+    "\n",
+    "   - `tf.keras.layers.RandomZoom`, \n",
+    "   \n",
+    " and others."
    ]
   },
   {
@@ -934,14 +940,20 @@
    "outputs": [],
    "source": [
     "model = tf.keras.Sequential([\n",
+    "  \n",
     "  layers.Conv2D(16, 3, padding='same', activation='relu'),\n",
     "  layers.MaxPooling2D(),\n",
+    "  \n",
     "  layers.Conv2D(32, 3, padding='same', activation='relu'),\n",
     "  layers.MaxPooling2D(),\n",
+    "  \n",
     "  layers.Conv2D(64, 3, padding='same', activation='relu'),\n",
     "  layers.MaxPooling2D(),\n",
+    "  \n",
+    "    \n",
     "  layers.Flatten(),\n",
     "  layers.Dense(128, activation='relu'),\n",
+    "    \n",
     "  layers.Dense(num_classes)\n",
     "])"
    ]
@@ -2497,7 +2509,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
