--- a/docs/structured_data_classification_shap.ipynb
+++ b/docs/structured_data_classification_shap.ipynb
@@ -15,7 +15,7 @@
     }
    },
    "source": [
-    "- This tutorial demonstrates how to do structured binary classification with Keras, starting from a raw CSV file. \n",
+    "- This tutorial demonstrates how to use structured binary classification with Keras, starting from a raw CSV file. \n",
     "\n",
     "\n",
     "- This example is an advanced version of [](structured_data_classification_intro.ipynb) since we will use more functions and less code."
@@ -35,20 +35,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "id": "aubhVbfWb_vk",
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2.8.1'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras import layers\n",
+    "\n",
+    "import shap\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "\n",
     "tf.__version__"
    ]
@@ -128,13 +144,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Detecting that an object or model or tf.train.Checkpoint is being deleted with unrestored values. See the following logs for the specific values in question. To silence these warnings, use `status.expect_partial()`. See https://www.tensorflow.org/api_docs/python/tf/train/Checkpoint#restorefor details about the status object returned by the restore function.\n",
+      "WARNING:tensorflow:An attribute in the restored object could not be found in the checkpoint. Object: (root).layer_with_weights-0.token_counts, attribute: ['']\n",
+      "WARNING:tensorflow:An attribute in the restored object could not be found in the checkpoint. Object: (root).layer_with_weights-1.token_counts, attribute: ['']\n",
+      "WARNING:tensorflow:An attribute in the restored object could not be found in the checkpoint. Object: (root).layer_with_weights-2.token_counts, attribute: ['']\n",
+      "WARNING:tensorflow:An attribute in the restored object could not be found in the checkpoint. Object: (root).layer_with_weights-3.token_counts, attribute: ['']\n",
+      "WARNING:tensorflow:An attribute in the restored object could not be found in the checkpoint. Object: (root).layer_with_weights-4.token_counts, attribute: ['']\n",
+      "WARNING:tensorflow:An attribute in the restored object could not be found in the checkpoint. Object: (root).layer_with_weights-5.token_counts, attribute: ['']\n",
+      "WARNING:tensorflow:An attribute in the restored object could not be found in the checkpoint. Object: (root).layer_with_weights-6.token_counts, attribute: ['']\n"
+     ]
+    }
+   ],
    "source": [
     "model = tf.keras.models.load_model('my_hd_classifier')"
    ]
@@ -159,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {
     "id": "UV7e_9K2b_vw",
     "slideshow": {
@@ -187,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -200,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -208,12 +239,12 @@
    },
    "outputs": [],
    "source": [
-    "predictions = reloaded_model.predict(input_dict)"
+    "predictions = model.predict(input_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -224,7 +255,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This particular patient had a 43.9 percent probability of having a heart disease, as evaluated by our model.\n"
+      "This particular patient had a 41.9 percent probability of having a heart disease, as evaluated by our model.\n"
      ]
     }
    ],
@@ -236,33 +267,34 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'X_train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/jankirenz/books/deep-learning/docs/structured_data_classification_shap.ipynb Cell 16'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/jankirenz/books/deep-learning/docs/structured_data_classification_shap.ipynb#ch0000082?line=0'>1</a>\u001b[0m explainer \u001b[39m=\u001b[39m shap\u001b[39m.\u001b[39mKernelExplainer(model\u001b[39m.\u001b[39mpredict, X_train)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'X_train' is not defined"
+     ]
     }
-   },
+   ],
    "source": [
-    "## Next steps"
+    "explainer = shap.KernelExplainer(model.predict, X_train)\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "The tutorial [](keras-imdb.ipynb) covers how to build a binary sentiment classification model with keras using keras layers for data preprocessing and TensorBoard to view model results.\n",
-    "\n",
-    "To learn more about classifying structured data, try working with other datasets. Below are some suggestions for datasets:\n",
-    "\n",
-    "- [TensorFlow Datasets: MovieLens](https://www.tensorflow.org/datasets/catalog/movie_lens): A set of movie ratings from a movie recommendation service.\n",
-    "\n",
-    "- [TensorFlow Datasets: Wine Quality](https://www.tensorflow.org/datasets/catalog/wine_quality): Two datasets related to red and white variants of the Portuguese \"Vinho Verde\" wine. You can also find the Red Wine Quality dataset on Kaggle.\n",
-    "\n",
-    "- [Kaggle: arXiv Dataset](https://www.kaggle.com/Cornell-University/arxiv): A corpus of 1.7 million scholarly articles from arXiv, covering physics, computer science, math, statistics, electrical engineering, quantitative biology, and economics."
+    "shap_values = explainer.shap_values(X_test.iloc[0,:])\n",
+    "shap.force_plot(explainer.expected_value[0], shap_values[0], X_test.iloc[0,:])"
    ]
   }
  ],
