--- a/_sources/docs/shap-keras-mnist.ipynb
+++ b/_sources/docs/shap-keras-mnist.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,16 +35,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "batch_size = 128\n",
     "num_classes = 10\n",
-    "epochs = 12\n",
+    "epochs = 4\n",
     "\n",
     "# input image dimensions\n",
-    "img_rows, img_cols = 28, 28\n",
+    "img_rows, img_cols = 28, 28"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# the data, split between train and test sets\n",
     "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
@@ -61,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,49 +150,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/12\n"
+      "Epoch 1/4\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-05-26 22:06:15.310844: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
+      "2022-05-29 12:45:41.639943: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "469/469 [==============================] - 22s 46ms/step - loss: 2.2797 - accuracy: 0.1539 - val_loss: 2.2381 - val_accuracy: 0.3093\n",
-      "Epoch 2/12\n",
-      "469/469 [==============================] - 22s 46ms/step - loss: 2.2149 - accuracy: 0.2711 - val_loss: 2.1579 - val_accuracy: 0.4743\n",
-      "Epoch 3/12\n",
-      "469/469 [==============================] - 22s 47ms/step - loss: 2.1320 - accuracy: 0.3712 - val_loss: 2.0515 - val_accuracy: 0.5980\n",
-      "Epoch 4/12\n",
-      "469/469 [==============================] - 22s 47ms/step - loss: 2.0209 - accuracy: 0.4515 - val_loss: 1.9086 - val_accuracy: 0.6657\n",
-      "Epoch 5/12\n",
-      "469/469 [==============================] - 22s 48ms/step - loss: 1.8797 - accuracy: 0.5095 - val_loss: 1.7313 - val_accuracy: 0.6928\n",
-      "Epoch 6/12\n",
-      "469/469 [==============================] - 22s 48ms/step - loss: 1.7178 - accuracy: 0.5513 - val_loss: 1.5311 - val_accuracy: 0.7259\n",
-      "Epoch 7/12\n",
-      "469/469 [==============================] - 22s 48ms/step - loss: 1.5430 - accuracy: 0.5890 - val_loss: 1.3274 - val_accuracy: 0.7639\n",
-      "Epoch 8/12\n",
-      "469/469 [==============================] - 23s 48ms/step - loss: 1.3795 - accuracy: 0.6240 - val_loss: 1.1421 - val_accuracy: 0.7894\n",
-      "Epoch 9/12\n",
-      "469/469 [==============================] - 23s 48ms/step - loss: 1.2438 - accuracy: 0.6504 - val_loss: 0.9923 - val_accuracy: 0.8049\n",
-      "Epoch 10/12\n",
-      "469/469 [==============================] - 22s 48ms/step - loss: 1.1302 - accuracy: 0.6738 - val_loss: 0.8763 - val_accuracy: 0.8176\n",
-      "Epoch 11/12\n",
-      "469/469 [==============================] - 23s 48ms/step - loss: 1.0396 - accuracy: 0.6951 - val_loss: 0.7870 - val_accuracy: 0.8298\n",
-      "Epoch 12/12\n",
-      "469/469 [==============================] - 22s 48ms/step - loss: 0.9681 - accuracy: 0.7109 - val_loss: 0.7180 - val_accuracy: 0.8381\n"
+      "469/469 [==============================] - 22s 46ms/step - loss: 2.2694 - accuracy: 0.1701 - val_loss: 2.2287 - val_accuracy: 0.4152\n",
+      "Epoch 2/4\n",
+      "469/469 [==============================] - 21s 46ms/step - loss: 2.2012 - accuracy: 0.3040 - val_loss: 2.1440 - val_accuracy: 0.5498\n",
+      "Epoch 3/4\n",
+      "469/469 [==============================] - 22s 47ms/step - loss: 2.1128 - accuracy: 0.4123 - val_loss: 2.0299 - val_accuracy: 0.6446\n",
+      "Epoch 4/4\n",
+      "469/469 [==============================] - 22s 47ms/step - loss: 1.9928 - accuracy: 0.4859 - val_loss: 1.8767 - val_accuracy: 0.6990\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x17de69ab0>"
+       "<keras.callbacks.History at 0x15f900cd0>"
       ]
      },
      "execution_count": 8,
@@ -209,8 +201,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test loss: 0.7179750800132751\n",
-      "Test accuracy: 0.838100016117096\n"
+      "Test loss: 1.8766707181930542\n",
+      "Test accuracy: 0.6990000009536743\n"
      ]
     }
    ],
@@ -241,7 +233,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/Users/jankirenz/books/deep-learning/docs/keras-mnist-shap.ipynb Cell 11'\u001b[0m in \u001b[0;36m<cell line: 11>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jankirenz/books/deep-learning/docs/keras-mnist-shap.ipynb#ch0000010?line=7'>8</a>\u001b[0m e \u001b[39m=\u001b[39m shap\u001b[39m.\u001b[39mDeepExplainer(model, background)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jankirenz/books/deep-learning/docs/keras-mnist-shap.ipynb#ch0000010?line=8'>9</a>\u001b[0m \u001b[39m# ...or pass tensors directly\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jankirenz/books/deep-learning/docs/keras-mnist-shap.ipynb#ch0000010?line=9'>10</a>\u001b[0m \u001b[39m# e = shap.DeepExplainer((model.layers[0].input, model.layers[-1].output), background)\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/jankirenz/books/deep-learning/docs/keras-mnist-shap.ipynb#ch0000010?line=10'>11</a>\u001b[0m shap_values \u001b[39m=\u001b[39m e\u001b[39m.\u001b[39;49mshap_values(x_test[\u001b[39m1\u001b[39;49m:\u001b[39m5\u001b[39;49m])\n",
+      "\u001b[1;32m/Users/jankirenz/books/deep-learning/docs/shap-keras-mnist.ipynb Cell 12'\u001b[0m in \u001b[0;36m<cell line: 11>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jankirenz/books/deep-learning/docs/shap-keras-mnist.ipynb#ch0000010?line=7'>8</a>\u001b[0m e \u001b[39m=\u001b[39m shap\u001b[39m.\u001b[39mDeepExplainer(model, background)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jankirenz/books/deep-learning/docs/shap-keras-mnist.ipynb#ch0000010?line=8'>9</a>\u001b[0m \u001b[39m# ...or pass tensors directly\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jankirenz/books/deep-learning/docs/shap-keras-mnist.ipynb#ch0000010?line=9'>10</a>\u001b[0m \u001b[39m# e = shap.DeepExplainer((model.layers[0].input, model.layers[-1].output), background)\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/jankirenz/books/deep-learning/docs/shap-keras-mnist.ipynb#ch0000010?line=10'>11</a>\u001b[0m shap_values \u001b[39m=\u001b[39m e\u001b[39m.\u001b[39;49mshap_values(x_test[\u001b[39m1\u001b[39;49m:\u001b[39m5\u001b[39;49m])\n",
       "File \u001b[0;32m/opt/homebrew/Caskroom/miniforge/base/envs/tf2/lib/python3.10/site-packages/shap/explainers/_deep/__init__.py:124\u001b[0m, in \u001b[0;36mDeep.shap_values\u001b[0;34m(self, X, ranked_outputs, output_rank_order, check_additivity)\u001b[0m\n\u001b[1;32m     <a href='file:///opt/homebrew/Caskroom/miniforge/base/envs/tf2/lib/python3.10/site-packages/shap/explainers/_deep/__init__.py?line=89'>90</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mshap_values\u001b[39m(\u001b[39mself\u001b[39m, X, ranked_outputs\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, output_rank_order\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mmax\u001b[39m\u001b[39m'\u001b[39m, check_additivity\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m):\n\u001b[1;32m     <a href='file:///opt/homebrew/Caskroom/miniforge/base/envs/tf2/lib/python3.10/site-packages/shap/explainers/_deep/__init__.py?line=90'>91</a>\u001b[0m     \u001b[39m\"\"\" Return approximate SHAP values for the model applied to the data given by X.\u001b[39;00m\n\u001b[1;32m     <a href='file:///opt/homebrew/Caskroom/miniforge/base/envs/tf2/lib/python3.10/site-packages/shap/explainers/_deep/__init__.py?line=91'>92</a>\u001b[0m \n\u001b[1;32m     <a href='file:///opt/homebrew/Caskroom/miniforge/base/envs/tf2/lib/python3.10/site-packages/shap/explainers/_deep/__init__.py?line=92'>93</a>\u001b[0m \u001b[39m    Parameters\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    <a href='file:///opt/homebrew/Caskroom/miniforge/base/envs/tf2/lib/python3.10/site-packages/shap/explainers/_deep/__init__.py?line=121'>122</a>\u001b[0m \u001b[39m        were chosen as \"top\".\u001b[39;00m\n\u001b[1;32m    <a href='file:///opt/homebrew/Caskroom/miniforge/base/envs/tf2/lib/python3.10/site-packages/shap/explainers/_deep/__init__.py?line=122'>123</a>\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> <a href='file:///opt/homebrew/Caskroom/miniforge/base/envs/tf2/lib/python3.10/site-packages/shap/explainers/_deep/__init__.py?line=123'>124</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mexplainer\u001b[39m.\u001b[39;49mshap_values(X, ranked_outputs, output_rank_order, check_additivity\u001b[39m=\u001b[39;49mcheck_additivity)\n",
       "File \u001b[0;32m/opt/homebrew/Caskroom/miniforge/base/envs/tf2/lib/python3.10/site-packages/shap/explainers/_deep/deep_tf.py:308\u001b[0m, in \u001b[0;36mTFDeep.shap_values\u001b[0;34m(self, X, ranked_outputs, output_rank_order, check_additivity)\u001b[0m\n\u001b[1;32m    <a href='file:///opt/homebrew/Caskroom/miniforge/base/envs/tf2/lib/python3.10/site-packages/shap/explainers/_deep/deep_tf.py?line=305'>306</a>\u001b[0m \u001b[39m# run attribution computation graph\u001b[39;00m\n\u001b[1;32m    <a href='file:///opt/homebrew/Caskroom/miniforge/base/envs/tf2/lib/python3.10/site-packages/shap/explainers/_deep/deep_tf.py?line=306'>307</a>\u001b[0m feature_ind \u001b[39m=\u001b[39m model_output_ranks[j,i]\n\u001b[0;32m--> <a href='file:///opt/homebrew/Caskroom/miniforge/base/envs/tf2/lib/python3.10/site-packages/shap/explainers/_deep/deep_tf.py?line=307'>308</a>\u001b[0m sample_phis \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mrun(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mphi_symbolic(feature_ind), \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmodel_inputs, joint_input)\n\u001b[1;32m    <a href='file:///opt/homebrew/Caskroom/miniforge/base/envs/tf2/lib/python3.10/site-packages/shap/explainers/_deep/deep_tf.py?line=309'>310</a>\u001b[0m \u001b[39m# assign the attributions to the right part of the output arrays\u001b[39;00m\n\u001b[1;32m    <a href='file:///opt/homebrew/Caskroom/miniforge/base/envs/tf2/lib/python3.10/site-packages/shap/explainers/_deep/deep_tf.py?line=310'>311</a>\u001b[0m \u001b[39mfor\u001b[39;00m l \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(X)):\n",
       "File \u001b[0;32m/opt/homebrew/Caskroom/miniforge/base/envs/tf2/lib/python3.10/site-packages/shap/explainers/_deep/deep_tf.py:365\u001b[0m, in \u001b[0;36mTFDeep.run\u001b[0;34m(self, out, model_inputs, X)\u001b[0m\n\u001b[1;32m    <a href='file:///opt/homebrew/Caskroom/miniforge/base/envs/tf2/lib/python3.10/site-packages/shap/explainers/_deep/deep_tf.py?line=361'>362</a>\u001b[0m     tf_execute\u001b[39m.\u001b[39mrecord_gradient \u001b[39m=\u001b[39m tf_backprop\u001b[39m.\u001b[39m_record_gradient\n\u001b[1;32m    <a href='file:///opt/homebrew/Caskroom/miniforge/base/envs/tf2/lib/python3.10/site-packages/shap/explainers/_deep/deep_tf.py?line=363'>364</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m final_out\n\u001b[0;32m--> <a href='file:///opt/homebrew/Caskroom/miniforge/base/envs/tf2/lib/python3.10/site-packages/shap/explainers/_deep/deep_tf.py?line=364'>365</a>\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mexecute_with_overridden_gradients(anon)\n",
