--- a/_sources/docs/shap_introduction.ipynb
+++ b/_sources/docs/shap_introduction.ipynb
@@ -1395,7 +1395,7 @@
    "hash": "ae37491be93ab49159331f0a34aabc23e6b831eda0a065a9b252432e581294a8"
   },
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('tf2')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1409,7 +1409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
