--- a/docs/structured_data_classification_shap.ipynb
+++ b/docs/structured_data_classification_shap.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "id": "aubhVbfWb_vk",
     "slideshow": {
@@ -44,14 +44,12 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'2.8.1'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TensorFlow: 2.8.1\n",
+      "SHAP: 0.40.0\n"
+     ]
     }
    ],
    "source": [
@@ -66,7 +64,8 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
-    "tf.__version__"
+    "print(f\"TensorFlow: {tf.__version__}\")\n",
+    "print(f\"SHAP: {shap.__version__}\")"
    ]
   },
   {
